test/end-to-end/compile-errors/bogus-local.crow
main void() summon
	x = z
	_ nat = x ? 1 : 2
